feat: Add ability to specify payload type
Why
- Some nodes require a json object as input, and sending a simple string
  does not work. The other node can check to see if the string can be
  parsed into object, however setting the output type in this node seems
  like a better future proof solution.

What
- Use typedInput to allow users to specify what type they would like the
  payload to be.
- For now we have only string and json type options, but this can be
  extended for more types if needed.

See: https://nodered.org/docs/api/ui/typedInput/#examples
See: https://nodered.org/docs/creating-nodes/edit-dialog
See: https://nodered.org/docs/creating-nodes/node-html

--- a/scheduleswitch.html
+++ b/scheduleswitch.html
@@ -31,12 +31,19 @@
       ><i class="fa fa-envelope"></i> <span>On Payload</span></label
     >
     <input type="text" id="node-input-onpayload" placeholder="on" />
+    <input type="hidden" id="node-input-onpayloadType" />
   </div>
   <div class="form-row">
-    <label for="node-input-offpayload"
-      ><i class="fa fa-envelope"></i> <span>Off Payload</span></label
-    >
-    <input type="text" id="node-input-offpayload" placeholder="off" />
+    <label for="node-input-offpayload">
+      <i class="fa fa-envelope"></i> <span>Off Payload</span>
+    </label>
+    <input
+      type="text"
+      id="node-input-offpayload"
+      class="js-payload-field"
+      placeholder="off"
+    />
+    <input type="hidden" id="node-input-offpayloadType" />
   </div>
   <hr />
   <div class="form-row">
@@ -190,6 +197,8 @@
       offtopic: { value: "" },
       onpayload: { value: "" },
       offpayload: { value: "" },
+      onpayloadType: { value: "str" },
+      offpayloadType: { value: "str" },
       disabled: { value: false },
       schedules: {
         value: [],
@@ -359,6 +368,18 @@
 
     oneditprepare: function () {
       var node = this;
+
+      // work on payload edit field
+      $("#node-input-onpayload").typedInput({
+        type: "str",
+        types: ["str", "json"],
+        typeField: "#node-input-onpayloadType",
+      });
+      $("#node-input-offpayload").typedInput({
+        type: "str",
+        types: ["str", "json"],
+        typeField: "#node-input-offpayloadType",
+      });
 
       /**
        * prepare schedule
